Polish MavenSettingsSecurityTest